# src/students/entities/student.entity.ts
@@ -2,7 +2,7 @@ import { Column, Entity, OneToMany, PrimaryGeneratedColumn, Unique } from 'typeo
 import { StudentInventory } from '../../inventory/entities/student-inventory.entity';
 
 @Entity({name: 'students'})
-@Unique('UQ_student_full_eq', ['fullName','roomNumber','faculty','course','studyGroup'])
+@Unique('UQ_student_full_eq', ['fullName','roomNumber','faculty','studyGroup'])
 export class Student {
   @PrimaryGeneratedColumn('increment')
   id!: number;
@@ -16,8 +16,8 @@ export class Student {
   @Column({type: 'varchar', length: 50})
   faculty!: string;
 
-  @Column({type: 'int'})
-  course!: number;
+  // @Column({type: 'int'})
+  // course!: number;
 
   @Column({type: 'varchar',length: 50})
   studyGroup!: string;
